# Embedded-Exercise

./: ARCHITECTURE.md  CMakeLists.txt  COMPLETION_REPORT.md  FILE_MANIFEST.md  FIX_SUMMARY.md  INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.bat  build.sh  camera.py  demo_verification.py  face_detector.py  main_usb_camera.cpp  requirements.txt  run_auto_capture.bat  test_camera.cpp  test_camera_detect.cpp  test_camera_detection.py  test_face_detector.py  test_integration.py
config/: default_config.json  test_config.json
include/: CameraConfig.h  FaceDetector.h  ImageProcessor.h  Logger.h  Protocols.h  USBCamera.h
src/: CameraConfig.cpp  FaceDetector.cpp  ImageProcessor.cpp  Logger.cpp  USBCamera.cpp
